<resources>
    <string name="app_name">native-mobile-case-study</string>
    <string name="back_text">back</string>
    <string name="filter_text_v2">Filters:</string>
    <string name="home_text">Home</string>
    <string name="basket_text">Basket</string>
    <string name="favorite_text">Favorite</string>
    <string name="profile_text">Profile</string>
    <string name="e_market_text">E-Market</string>
    <string name="search_text">Search</string>
    <string name="select_filter_text">Select Filter</string>
    <string name="retry_text">Retry</string>
    <string name="empty_text">Not Found Product</string>
    <string name="add_to_card_text">Add To Card</string>
    <string name="price_text">Price:</string>
    <string name="currency_symbol"> ₺</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="total_text">Total:</string>
    <string name="complete_text">Complete</string>
    <string name="not_found_fav">Not Found Favorite Product</string>
    <string name="product_added_to_cart_text">Product Added to Cart</string>
    <string name="filter_text">Filter</string>
    <string name="sort_by_text">Sort by:</string>
    <string name="brand_text">Brand:</string>
    <string name="model_text">Model:</string>
    <string name="apply_filters_text">Primary</string>
    <string name="delete_order_text">Delete Order</string>
    <string name="not_found_order">Not Found Order</string>
    <string name="not_found_product_in_cart_text">Not Found Product in Basket</string>
    <string name="not_found_product_in_favorite_text">Not Found Product in Favorite Page</string>
    <string name="are_you_sure_delete_text">Are you sure you want to delete this item?</string>
    <string name="yes_text">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>