<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:fontFamily=""
        android:text="@string/price_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:fontFamily=""
        tools:text="@string/price_text"
        android:textColor="@color/mainBlue"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusButton"
        style="@style/buttonStyleBasket"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/minus_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/quantityButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/quantityButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:background="@color/mainBlue"
        tools:text = "1"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toBottomOf="@+id/minusButton"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="@+id/minusButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusButton"
        style="@style/buttonStyleBasket"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:text="@string/plus_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>