<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.homePage.HomePageFragment">
        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressTint="@color/mainBlue"
                android:indeterminate="true"
                />
        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/mainBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_title"
                style="@style/boldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/e_market_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerArea">

            <RelativeLayout
                android:id="@+id/searchCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@color/white"
                    app:queryHint="@string/search_text" />
            </RelativeLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/filtersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/filter_text_v2"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/selectFilterButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/selectFilterButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectFilterButton"
                android:layout_width="158dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@color/filter_button_bg_color"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/select_filter_text"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchCardView" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clipToPadding="true"
                android:paddingBottom="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectFilterButton" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/searchEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/empty_text"
                android:textColor="@color/mainBlue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectFilterButton" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily=""
                android:text="@string/retry_text"
                android:textColor="@color/mainBlue"
                android:textSize="5dp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/retryButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/retry_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errorText" />

            <TextView
                android:id="@+id/textViewItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>