<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.cart.BasketFragment">
        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressTint="@color/mainBlue"
                android:indeterminate="true"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/emptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found_product_in_cart_text"
            android:visibility="gone"
            android:textSize="20sp"
            android:textColor="@color/mainBlue"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerArea"
            android:layout_width="match_parent"
            android:background="@color/mainBlue"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_title"
                style="@style/boldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/e_market_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcBasket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/staticTotalPriceTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerArea" />

        <TextView
            android:id="@+id/staticTotalPriceTv"
            style="@style/regularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_text"
            android:textColor="@color/mainBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/priceTv"
            app:layout_constraintStart_toStartOf="@+id/priceTv" />

        <TextView
            android:id="@+id/priceTv"
            style="@style/regularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:text="0 ₺"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="123123 ₺" />

        <Button
            android:id="@+id/completeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily=""
            android:paddingHorizontal="16dp"
            android:text="@string/complete_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/priceTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/staticTotalPriceTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>