<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="product"
            type="com.selamikadioglu.native_mobile_case_study.ui.homePage.ProductUiModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.detail.ProductDetailFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerArea"
            android:layout_width="match_parent"
            android:background="@color/mainBlue"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_title"
                style="@style/boldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{product.name}"
                tools:text = "Test"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/backIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerArea">

            <ImageView
                android:id="@+id/productIv"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/favoriteIv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignEnd="@id/productIv"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_favorite_selector" />

        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productName"
            style="@style/boldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@{product.name}"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. " />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productDetailTv"
            style="@style/regularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="10"
            android:text="@{product.description}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@id/productName"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/staticPriceTv"
            style="@style/regularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/price_text"
            android:textColor="@color/mainBlue"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/priceTv"
            app:layout_constraintEnd_toStartOf="@+id/addToCardButton"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priceTv"
            style="@style/boldTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{product.price}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/addToCardButton"
            app:layout_constraintEnd_toStartOf="@+id/addToCardButton"
            app:layout_constraintStart_toStartOf="@id/relativeLayout"
            tools:text="123123 ₺" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToCardButton"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginBottom="100dp"
            android:paddingHorizontal="50dp"
            android:text="@string/add_to_card_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/relativeLayout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>